--- a/index.html
+++ b/index.html
@@ -3,93 +3,195 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anmol Thapa | Infrastructure Engineer</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Your Name | Infrastructure Engineer</title>
+  <style>
+    /* Basic reset + global */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html { scroll-behavior: smooth; }
+    body { font-family: Arial, sans-serif; color: #333; line-height: 1.6; }
+    a { color: #007acc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    section { padding: 60px 20px; }
+    .container { max-width: 900px; margin: 0 auto; }
+    h1, h2, h3 { margin-bottom: 20px; }
+    .btn { display: inline-block; padding: 10px 20px; background: #007acc; color: white; border-radius: 4px; }
+    .btn:hover { background: #005f9e; }
+
+    /* Header / hero */
+    #hero {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: #f5f5f5;
+      text-align: center;
+    }
+    #hero h1 { font-size: 3rem; margin-bottom: 20px; }
+    #hero p { font-size: 1.25rem; color: #555; }
+
+    /* Navigation */
+    nav {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      background: rgba(255,255,255,0.9);
+      border-bottom: 1px solid #ddd;
+      z-index: 100;
+    }
+    nav .container { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; }
+    nav ul { list-style: none; display: flex; gap: 20px; }
+    nav li { }
+    
+    /* Section headings */
+    .section-heading { margin-bottom: 40px; text-align: center; }
+
+    /* Skills list */
+    .skills-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .skills-list span {
+      background: #e0f2ff;
+      color: #007acc;
+      padding: 8px 12px;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+
+    /* Projects */
+    .project-card {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 20px;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .project-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    .project-card h3 { margin-bottom: 10px; }
+    .project-card .tech { margin-top: 10px; color: #666; font-size: 0.9rem; }
+
+    /* Contact form (just layout) */
+    .contact-form input, .contact-form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .contact-form button {
+      padding: 10px 20px;
+      background: #007acc;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    .contact-form button:hover { background: #005f9e; }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      color: #777;
+      font-size: 0.9rem;
+      background: #f9f9f9;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body>
 
-  <!-- Header -->
-  <header class="bg-gray-900 text-white p-8 text-center">
-    <h1 class="text-4xl font-bold">Anmol Thapa</h1>
-    <p class="text-gray-300 mt-2 text-lg">Infrastructure Engineer | Kubernetes | OpenShift | DevOps</p>
-  </header>
+  <nav>
+    <div class="container">
+      <div class="logo"><a href="#hero">YourName</a></div>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <!-- About -->
-  <section class="max-w-3xl mx-auto p-8">
-    <h2 class="text-2xl font-bold mb-4">🚀 About Me</h2>
-    <p class="leading-relaxed text-gray-700">
-      I'm an Infrastructure Engineer specializing in Kubernetes and OpenShift clusters. I focus on automation,
-      observability, and building scalable infrastructure through DevOps and GitOps principles.
+  <section id="hero">
+    <h1>Hi, I'm Your Name</h1>
+    <p>Infrastructure Engineer | Kubernetes | OpenShift | DevOps Automation</p>
+    <a class="btn" href="#projects">View Projects</a>
+  </section>
+
+  <section id="about" class="container">
+    <h2 class="section-heading">About Me</h2>
+    <p>
+      I’m an Infrastructure Engineer with expertise in Kubernetes and OpenShift. I build automated, resilient systems, focusing on infrastructure-as-code, observability, and reliability.  
+      I’ve built tooling, automated deployment pipelines, and cross-cluster governance systems. Outside of work, I love tinkering with performance, exploring new cloud services, and writing about infra.  
     </p>
   </section>
 
-  <!-- Skills -->
-  <section class="max-w-3xl mx-auto p-8">
-    <h2 class="text-2xl font-bold mb-4">⚙️ Skills</h2>
-    <div class="grid grid-cols-2 sm:grid-cols-3 gap-3 text-gray-700">
-      <span class="bg-white shadow rounded-lg p-3 text-center">Kubernetes</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">OpenShift</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">Terraform</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">Ansible</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">Prometheus / Grafana</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">Argo CD</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">Helm</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">GitOps</span>
-      <span class="bg-white shadow rounded-lg p-3 text-center">AWS / EKS</span>
+  <section id="skills" class="container">
+    <h2 class="section-heading">Skills & Technologies</h2>
+    <div class="skills-list">
+      <span>Kubernetes</span>
+      <span>OpenShift</span>
+      <span>Terraform</span>
+      <span>Ansible</span>
+      <span>Helm</span>
+      <span>Argo CD</span>
+      <span>Prometheus / Grafana</span>
+      <span>GitOps</span>
+      <span>CI/CD</span>
+      <span>Linux / Bash</span>
+      <span>AWS / EKS</span>
     </div>
   </section>
 
-  <!-- Projects -->
-  <section class="max-w-3xl mx-auto p-8">
-    <h2 class="text-2xl font-bold mb-4">🧱 Projects</h2>
+  <section id="education" class="container">
+    <h2 class="section-heading">Education / Certifications</h2>
+    <p><strong>B.S. in Computer Science</strong> — Your University Name</p>
+    <p><strong>Certifications:</strong> AWS Solutions Architect, CKA / CKAD, etc.</p>
+  </section>
 
-    <div class="space-y-6">
-      <div class="bg-white shadow rounded-xl p-5">
-        <h3 class="text-xl font-semibold">🔹 OpenShift Storage Growth Automation</h3>
-        <p class="text-gray-700 mt-2">
-          Automated Prometheus storage scaling logic based on retention period and PVC metrics analysis.
-        </p>
-        <p class="mt-2 text-sm text-gray-500">Tech: Prometheus, ConfigMap, Python, OpenShift</p>
-      </div>
+  <section id="projects" class="container">
+    <h2 class="section-heading">Projects</h2>
 
-      <div class="bg-white shadow rounded-xl p-5">
-        <h3 class="text-xl font-semibold">🔹 RBAC Governance with ACM + Kyverno</h3>
-        <p class="text-gray-700 mt-2">
-          Built GitOps-driven access governance across OpenShift clusters using ACM and Kyverno.
-        </p>
-        <p class="mt-2 text-sm text-gray-500">Tech: ACM, Kyverno, Argo CD, GitLab CI/CD</p>
-      </div>
-
-      <div class="bg-white shadow rounded-xl p-5">
-        <h3 class="text-xl font-semibold">🔹 Automated ETCD Performance Assessment</h3>
-        <p class="text-gray-700 mt-2">
-          Designed and executed Ansible playbooks to benchmark and optimize etcd pod latency and throughput.
-        </p>
-        <p class="mt-2 text-sm text-gray-500">Tech: Ansible, etcd, OpenShift, Metrics APIs</p>
-      </div>
+    <div class="project-card">
+      <h3>OpenShift Storage Growth Automation</h3>
+      <p>Automated Prometheus storage scaling logic based on retention period and PVC metrics analysis.</p>
+      <div class="tech">Tech: Prometheus, OpenShift API, Python, ConfigMap</div>
     </div>
+
+    <div class="project-card">
+      <h3>RBAC Governance with ACM + Kyverno</h3>
+      <p>GitOps-based RBAC governance system across OpenShift clusters, enforcing policies automatically.</p>
+      <div class="tech">Tech: ACM, Kyverno, Argo CD, GitLab CI/CD</div>
+    </div>
+
+    <div class="project-card">
+      <h3>ETCD Performance Assessment</h3>
+      <p>Designed and ran benchmarks with Ansible to optimize etcd throughput and latency in production clusters.</p>
+      <div class="tech">Tech: Ansible, etcd, Prometheus, OpenShift</div>
+    </div>
+
   </section>
 
-  <!-- Blog -->
-  <section class="max-w-3xl mx-auto p-8">
-    <h2 class="text-2xl font-bold mb-4">📝 Blog</h2>
-    <ul class="list-disc pl-6 text-gray-700">
-      <li><a href="#" class="text-blue-600 hover:underline">Optimizing Prometheus Storage Retention in OpenShift</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">Deploying Argo CD via Helm on Managed Clusters</a></li>
-    </ul>
+  <section id="contact" class="container">
+    <h2 class="section-heading">Get in Touch</h2>
+    <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+      <input type="text" name="name" placeholder="Your name" required>
+      <input type="email" name="_replyto" placeholder="Your email" required>
+      <textarea name="message" rows="5" placeholder="Your message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+    <p style="margin-top: 20px;">
+      Or email me at <a href="mailto:your.email@example.com">your.email@example.com</a>
+    </p>
   </section>
 
-  <!-- Contact -->
-  <footer class="bg-gray-900 text-gray-300 text-center p-6">
-    <h2 class="text-lg font-semibold">📫 Contact</h2>
-    <p class="mt-2">
-      <a href="mailto:your.email@example.com" class="text-blue-400 hover:underline">your.email@example.com</a>
-    </p>
-    <p class="mt-2">
-      <a href="https://linkedin.com/in/yourprofile" class="text-blue-400 hover:underline">LinkedIn</a> |
-      <a href="https://github.com/yourusername" class="text-blue-400 hover:underline">GitHub</a>
-    </p>
-    <p class="mt-4 text-sm text-gray-500">© 2025 Anmol Thapa</p>
+  <footer>
+    &copy; 2025 Your Name. All rights reserved.
   </footer>
 
 </body>
