--- a/index.html
+++ b/index.html
@@ -1,198 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Infrastructure Engineer</title>
-  <style>
-    /* Basic reset + global */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
-    body { font-family: Arial, sans-serif; color: #333; line-height: 1.6; }
-    a { color: #007acc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    section { padding: 60px 20px; }
-    .container { max-width: 900px; margin: 0 auto; }
-    h1, h2, h3 { margin-bottom: 20px; }
-    .btn { display: inline-block; padding: 10px 20px; background: #007acc; color: white; border-radius: 4px; }
-    .btn:hover { background: #005f9e; }
+/* Navbar */ nav { position: fixed; width: 100%; background: rgba(15,15,15,0.95); display: flex; justify-content: center; padding: 15px 0; z-index: 1000; } nav ul { display: flex; gap: 30px; list-style: none; } nav a { font-weight: 600; } nav a.active { color: #00ffff; }
 
-    /* Header / hero */
-    #hero {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: #f5f5f5;
-      text-align: center;
-    }
-    #hero h1 { font-size: 3rem; margin-bottom: 20px; }
-    #hero p { font-size: 1.25rem; color: #555; }
+/* Hero Section */ #hero { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: linear-gradient(135deg, #0f0f0f, #1a1a1a); } #hero h1 { font-size: 3rem; margin-bottom: 20px; color: #00bcd4; } #hero p { font-size: 1.25rem; color: #cccccc; margin-bottom: 20px; } .btn { padding: 12px 25px; border: 2px solid #00bcd4; border-radius: 50px; font-weight: 600; transition: all 0.3s ease; } .btn:hover { background: #00bcd4; color: #000; }
 
-    /* Navigation */
-    nav {
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      background: rgba(255,255,255,0.9);
-      border-bottom: 1px solid #ddd;
-      z-index: 100;
-    }
-    nav .container { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; }
-    nav ul { list-style: none; display: flex; gap: 20px; }
-    nav li { }
-    
-    /* Section headings */
-    .section-heading { margin-bottom: 40px; text-align: center; }
+/* Sections */ section { padding: 80px 20px; max-width: 1000px; margin: 0 auto; } .section-heading { font-size: 2.5rem; text-align: center; margin-bottom: 50px; color: #00bcd4; }
 
-    /* Skills list */
-    .skills-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-    .skills-list span {
-      background: #e0f2ff;
-      color: #007acc;
-      padding: 8px 12px;
-      border-radius: 4px;
-      font-weight: bold;
-    }
+/* Skills */ .skills-list { display: flex; flex-wrap: wrap; gap: 12px; justify-content: center; } .skills-list span { background: #111; border: 1px solid #00bcd4; padding: 10px 18px; border-radius: 12px; font-weight: 600; transition: transform 0.3s; } .skills-list span:hover { transform: scale(1.1); }
 
-    /* Projects */
-    .project-card {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 20px;
-      margin-bottom: 20px;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .project-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    .project-card h3 { margin-bottom: 10px; }
-    .project-card .tech { margin-top: 10px; color: #666; font-size: 0.9rem; }
+/* Projects */ .projects { display: grid; grid-template-columns: 1fr 1fr; gap: 25px; } .project-card { background: #1a1a1a; border: 1px solid #00bcd4; border-radius: 15px; padding: 25px; transition: transform 0.4s, box-shadow 0.4s; cursor: pointer; } .project-card:hover { transform: translateY(-10px) scale(1.03); box-shadow: 0 15px 30px rgba(0,188,212,0.4); } .project-card h3 { font-size: 1.6rem; margin-bottom: 12px; color: #00bcd4; } .project-card p { color: #cccccc; margin-bottom: 12px; } .project-card .tech { font-size: 0.9rem; color: #888; }
 
-    /* Contact form (just layout) */
-    .contact-form input, .contact-form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .contact-form button {
-      padding: 10px 20px;
-      background: #007acc;
-      color: white;
-      border: none;
-      border-radius: 4px;
-    }
-    .contact-form button:hover { background: #005f9e; }
+/* Contact Form */ .contact-form input, .contact-form textarea { width: 100%; padding: 15px; margin-bottom: 15px; border-radius: 12px; border: 1px solid #00bcd4; background: #111; color: #fff; transition: all 0.3s; } .contact-form input:focus, .contact-form textarea:focus { border-color: #00ffff; outline: none; } .contact-form button { padding: 15px 30px; border-radius: 50px; border: 2px solid #00bcd4; background: none; font-weight: 600; cursor: pointer; transition: all 0.3s; } .contact-form button:hover { background: #00bcd4; color: #000; }
 
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 30px 20px;
-      color: #777;
-      font-size: 0.9rem;
-      background: #f9f9f9;
-    }
-  </style>
-</head>
-<body>
+/* Footer */ footer { text-align: center; padding: 50px 20px; color: #888; background: #0f0f0f; }
 
-  <nav>
-    <div class="container">
-      <div class="logo"><a href="#hero">YourName</a></div>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+/* Animations */ .fade-up { opacity: 0; transform: translateY(40px); transition: all 0.7s ease-out; } .fade-up.show { opacity: 1; transform: translateY(0); }
 
-  <section id="hero">
-    <h1>Hi, I'm Your Name</h1>
-    <p>Infrastructure Engineer | Kubernetes | OpenShift | DevOps Automation</p>
-    <a class="btn" href="#projects">View Projects</a>
-  </section>
-
-  <section id="about" class="container">
-    <h2 class="section-heading">About Me</h2>
-    <p>
-      I’m an Infrastructure Engineer with expertise in Kubernetes and OpenShift. I build automated, resilient systems, focusing on infrastructure-as-code, observability, and reliability.  
-      I’ve built tooling, automated deployment pipelines, and cross-cluster governance systems. Outside of work, I love tinkering with performance, exploring new cloud services, and writing about infra.  
-    </p>
-  </section>
-
-  <section id="skills" class="container">
-    <h2 class="section-heading">Skills & Technologies</h2>
-    <div class="skills-list">
-      <span>Kubernetes</span>
-      <span>OpenShift</span>
-      <span>Terraform</span>
-      <span>Ansible</span>
-      <span>Helm</span>
-      <span>Argo CD</span>
-      <span>Prometheus / Grafana</span>
-      <span>GitOps</span>
-      <span>CI/CD</span>
-      <span>Linux / Bash</span>
-      <span>AWS / EKS</span>
-    </div>
-  </section>
-
-  <section id="education" class="container">
-    <h2 class="section-heading">Education / Certifications</h2>
-    <p><strong>B.S. in Computer Science</strong> — Your University Name</p>
-    <p><strong>Certifications:</strong> AWS Solutions Architect, CKA / CKAD, etc.</p>
-  </section>
-
-  <section id="projects" class="container">
-    <h2 class="section-heading">Projects</h2>
-
-    <div class="project-card">
-      <h3>OpenShift Storage Growth Automation</h3>
-      <p>Automated Prometheus storage scaling logic based on retention period and PVC metrics analysis.</p>
-      <div class="tech">Tech: Prometheus, OpenShift API, Python, ConfigMap</div>
-    </div>
-
-    <div class="project-card">
-      <h3>RBAC Governance with ACM + Kyverno</h3>
-      <p>GitOps-based RBAC governance system across OpenShift clusters, enforcing policies automatically.</p>
-      <div class="tech">Tech: ACM, Kyverno, Argo CD, GitLab CI/CD</div>
-    </div>
-
-    <div class="project-card">
-      <h3>ETCD Performance Assessment</h3>
-      <p>Designed and ran benchmarks with Ansible to optimize etcd throughput and latency in production clusters.</p>
-      <div class="tech">Tech: Ansible, etcd, Prometheus, OpenShift</div>
-    </div>
-
-  </section>
-
-  <section id="contact" class="container">
-    <h2 class="section-heading">Get in Touch</h2>
-    <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-      <input type="text" name="name" placeholder="Your name" required>
-      <input type="email" name="_replyto" placeholder="Your email" required>
-      <textarea name="message" rows="5" placeholder="Your message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-    <p style="margin-top: 20px;">
-      Or email me at <a href="mailto:your.email@example.com">your.email@example.com</a>
-    </p>
-  </section>
-
-  <footer>
-    &copy; 2025 Your Name. All rights reserved.
-  </footer>
-
-</body>
-</html>
+@media(max-width: 768px){ .projects { grid-template-columns: 1fr; } nav ul { gap: 15px; } }
