--- a/index.html
+++ b/index.html
@@ -6,58 +6,83 @@
   <title>Anmol Thapa | Infrastructure Engineer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Global */
     * { margin:0; padding:0; box-sizing:border-box; }
-    html { scroll-behavior: smooth; }
-    body { font-family:'Inter', sans-serif; background:#0f0f0f; color:#fff; }
-
-    a { color:#00bcd4; text-decoration:none; }
-    a:hover { text-decoration:underline; }
+    html { scroll-behavior:smooth; }
+    body { font-family:'Inter',sans-serif; background:#0f0f0f; color:#fff; overflow-x:hidden; }
 
     /* Navbar */
-    nav { position: fixed; width:100%; background: rgba(15,15,15,0.95); display:flex; justify-content:center; padding:15px 0; z-index:1000; }
+    nav {
+      position:fixed; width:100%; background:rgba(15,15,15,0.8);
+      display:flex; justify-content:center; padding:15px 0; z-index:1000;
+      backdrop-filter:blur(12px);
+    }
     nav ul { display:flex; gap:30px; list-style:none; }
-    nav a { font-weight:600; }
-    nav a.active { color:#00ffff; }
+    nav a { font-weight:600; color:#fff; transition:color .3s; }
+    nav a.active, nav a:hover { color:#00ffff; }
 
     /* Hero */
-    #hero { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; background: linear-gradient(135deg,#0f0f0f,#1a1a1a); }
-    #hero h1 { font-size:3rem; margin-bottom:20px; color:#00bcd4; }
-    #hero p { font-size:1.25rem; color:#cccccc; margin-bottom:20px; }
-    .btn { padding:12px 25px; border:2px solid #00bcd4; border-radius:50px; font-weight:600; transition: all 0.3s ease; }
-    .btn:hover { background:#00bcd4; color:#000; }
+    #hero {
+      height:100vh; display:flex; flex-direction:column;
+      justify-content:center; align-items:center;
+      text-align:center; background: radial-gradient(circle at top left,#001f2b,#000);
+      position:relative; overflow:hidden;
+    }
+    #hero::before {
+      content:''; position:absolute; top:0; left:0; width:100%; height:100%;
+      background: radial-gradient(circle at 30% 30%,rgba(0,188,212,0.2),transparent 60%);
+      animation: pulse 8s infinite alternate;
+    }
+    @keyframes pulse {
+      from { transform:scale(1); opacity:0.7; }
+      to { transform:scale(1.3); opacity:0.4; }
+    }
+    #hero h1 { font-size:3rem; color:#00e5ff; margin-bottom:20px; z-index:1; }
+    #hero p { color:#ccc; font-size:1.2rem; z-index:1; margin-bottom:25px; }
+    .btn {
+      z-index:1; padding:12px 25px; border:2px solid #00e5ff;
+      border-radius:40px; font-weight:600; transition:.3s;
+    }
+    .btn:hover { background:#00e5ff; color:#000; }
 
     /* Sections */
-    section { padding:80px 20px; max-width:1000px; margin:0 auto; }
-    .section-heading { font-size:2.5rem; text-align:center; margin-bottom:50px; color:#00bcd4; }
+    section { padding:100px 20px; max-width:1100px; margin:0 auto; }
+    .section-heading { font-size:2.5rem; text-align:center; margin-bottom:60px; color:#00e5ff; }
+
+    /* About */
+    #about p { text-align:center; max-width:800px; margin:0 auto; line-height:1.7; font-size:1.1rem; color:#ccc; }
 
     /* Skills */
     .skills-list { display:flex; flex-wrap:wrap; gap:12px; justify-content:center; }
-    .skills-list span { background:#111; border:1px solid #00bcd4; padding:10px 18px; border-radius:12px; font-weight:600; transition: transform 0.3s; }
-    .skills-list span:hover { transform: scale(1.1); }
+    .skills-list span {
+      background:rgba(255,255,255,0.05); border:1px solid #00e5ff; padding:10px 20px;
+      border-radius:12px; font-weight:600; transition:transform .3s, box-shadow .3s;
+    }
+    .skills-list span:hover { transform:scale(1.1); box-shadow:0 0 15px rgba(0,229,255,0.3); }
 
     /* Projects */
-    .projects { display:grid; grid-template-columns:1fr 1fr; gap:25px; }
-    .project-card { background:#1a1a1a; border:1px solid #00bcd4; border-radius:15px; padding:25px; transition: transform 0.4s, box-shadow 0.4s; cursor:pointer; }
-    .project-card:hover { transform:translateY(-10px) scale(1.03); box-shadow:0 15px 30px rgba(0,188,212,0.4); }
-    .project-card h3 { font-size:1.6rem; margin-bottom:12px; color:#00bcd4; }
-    .project-card p { color:#cccccc; margin-bottom:12px; }
-    .project-card .tech { font-size:0.9rem; color:#888; }
+    .projects { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:30px; }
+    .project-card {
+      background:rgba(255,255,255,0.05); border:1px solid rgba(0,229,255,0.3);
+      border-radius:15px; padding:25px; transition:.4s; backdrop-filter:blur(5px);
+    }
+    .project-card:hover {
+      transform:translateY(-8px) scale(1.03); box-shadow:0 15px 30px rgba(0,229,255,0.3);
+    }
+    .project-card h3 { color:#00e5ff; margin-bottom:10px; font-size:1.5rem; }
+    .project-card p { color:#ccc; margin-bottom:12px; line-height:1.5; }
+    .project-card .tech { color:#888; font-size:.9rem; }
 
-    /* Contact Form */
-    .contact-form input, .contact-form textarea { width:100%; padding:15px; margin-bottom:15px; border-radius:12px; border:1px solid #00bcd4; background:#111; color:#fff; transition: all 0.3s; }
-    .contact-form input:focus, .contact-form textarea:focus { border-color:#00ffff; outline:none; }
-    .contact-form button { padding:15px 30px; border-radius:50px; border:2px solid #00bcd4; background:none; font-weight:600; cursor:pointer; transition: all 0.3s; }
-    .contact-form button:hover { background:#00bcd4; color:#000; }
+    /* Contact */
+    .contact-links { text-align:center; margin-top:30px; }
+    .contact-links a {
+      color:#00e5ff; margin:0 15px; font-size:1.3rem; transition:color .3s;
+    }
+    .contact-links a:hover { color:#fff; }
 
-    /* Footer */
-    footer { text-align:center; padding:50px 20px; color:#888; background:#0f0f0f; }
+    footer { text-align:center; padding:50px 20px; color:#888; border-top:1px solid rgba(255,255,255,0.1); }
 
-    /* Animations */
-    .fade-up { opacity:0; transform:translateY(40px); transition: all 0.7s ease-out; }
+    .fade-up { opacity:0; transform:translateY(40px); transition: all .8s ease-out; }
     .fade-up.show { opacity:1; transform:translateY(0); }
-
-    @media(max-width:768px){ .projects { grid-template-columns:1fr; } nav ul { gap:15px; } }
   </style>
 </head>
 <body>
@@ -80,81 +105,76 @@
 
 <section id="about">
   <h2 class="section-heading fade-up">About Me</h2>
-  <p class="fade-up">I'm an Infrastructure Engineer specializing in Kubernetes and OpenShift. I build automated, scalable, and observable infrastructure. My expertise includes GitOps, RBAC governance, Prometheus monitoring, and cluster automation.</p>
+  <p class="fade-up">
+    I'm an <b>Infrastructure Engineer</b> with strong expertise in <b>Kubernetes</b> and <b>OpenShift</b>.  
+    I design, automate, and secure modern cloud environments.  
+    My focus is on observability, RBAC governance, cluster performance, and GitOps-driven delivery.
+  </p>
 </section>
 
 <section id="skills">
-  <h2 class="section-heading fade-up">Skills & Technologies</h2>
+  <h2 class="section-heading fade-up">Skills</h2>
   <div class="skills-list fade-up">
     <span>Kubernetes</span><span>OpenShift</span><span>Terraform</span><span>Ansible</span><span>Helm</span>
-    <span>Argo CD</span><span>Prometheus/Grafana</span><span>GitOps</span><span>CI/CD</span><span>AWS/EKS</span>
+    <span>Argo CD</span><span>Prometheus</span><span>Grafana</span><span>GitOps</span><span>AWS/EKS</span>
+    <span>Linux</span><span>Networking</span><span>CI/CD</span>
   </div>
 </section>
 
 <section id="projects">
   <h2 class="section-heading fade-up">Projects</h2>
-  <div class="projects">
-    <div class="project-card fade-up">
+  <div class="projects fade-up">
+    <div class="project-card">
       <h3>OpenShift Storage Growth Automation</h3>
-      <p>Automated Prometheus storage scaling logic based on retention period and PVC metrics.</p>
-      <div class="tech">Tech: Prometheus, Python, ConfigMap, OpenShift</div>
+      <p>Built a Prometheus-based logic to auto-adjust storage PVC sizes based on retention metrics.</p>
+      <div class="tech">Tech: OpenShift, Python, Prometheus, ConfigMaps</div>
     </div>
-    <div class="project-card fade-up">
-      <h3>RBAC Governance with ACM + Kyverno</h3>
-      <p>GitOps-based RBAC governance system across OpenShift clusters, enforcing policies automatically.</p>
-      <div class="tech">Tech: ACM, Kyverno, Argo CD, GitLab CI/CD</div>
+    <div class="project-card">
+      <h3>RBAC Governance Platform</h3>
+      <p>Implemented centralized access control across clusters using ACM, Kyverno, and GitOps policies.</p>
+      <div class="tech">Tech: Kyverno, Argo CD, ACM, GitLab CI/CD</div>
     </div>
-    <div class="project-card fade-up">
-      <h3>ETCD Performance Assessment</h3>
-      <p>Benchmarked and optimized etcd pod throughput and latency with Ansible playbooks.</p>
+    <div class="project-card">
+      <h3>ETCD Performance Optimization</h3>
+      <p>Created automated Ansible playbooks to benchmark and improve etcd response latency.</p>
       <div class="tech">Tech: Ansible, ETCD, Prometheus, OpenShift</div>
     </div>
   </div>
 </section>
 
 <section id="contact">
-  <h2 class="section-heading fade-up">Contact Me</h2>
-  <form class="contact-form fade-up" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="_replyto" placeholder="Your Email" required>
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-  <p style="margin-top:20px;" class="fade-up">Or email me at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+  <h2 class="section-heading fade-up">Get In Touch</h2>
+  <p style="text-align:center; color:#ccc;">Feel free to reach out — I’m always open to collaborations and discussions about Kubernetes and cloud infrastructure.</p>
+  <div class="contact-links fade-up">
+    <a href="mailto:your.email@example.com" target="_blank">📧 Email</a>
+    <a href="https://github.com/yourgithub" target="_blank">💻 GitHub</a>
+    <a href="https://www.linkedin.com/in/anmol-thapa07/" target="_blank">🔗 LinkedIn</a>
+  </div>
 </section>
 
 <footer>
-  &copy; 2025 Anmol Thapa. All rights reserved.
+  © 2025 Anmol Thapa — Built with 💙 using HTML & CSS
 </footer>
 
 <script>
-  // Scroll animations
+  // Fade animations
   const faders = document.querySelectorAll('.fade-up');
-  const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
-  const appearOnScroll = new IntersectionObserver(function(entries, observer){
-    entries.forEach(entry => { if(entry.isIntersecting){ entry.target.classList.add('show'); observer.unobserve(entry.target); } });
-  }, appearOptions);
-  faders.forEach(fader => appearOnScroll.observe(fader));
-
-  // Navbar active link
-  const sections = document.querySelectorAll('section, header');
-  const navLi = document.querySelectorAll('nav ul li a');
-  window.addEventListener('scroll', ()=>{
-    let current = '';
-    sections.forEach(section=>{
-      const sectionTop = section.offsetTop - 60;
-      if(scrollY >= sectionTop) current = section.getAttribute('id');
+  const appearOptions = { threshold:0.2 };
+  const appearOnScroll = new IntersectionObserver(function(entries,observer){
+    entries.forEach(entry=>{
+      if(entry.isIntersecting){ entry.target.classList.add('show'); observer.unobserve(entry.target); }
     });
-    navLi.forEach(a => { a.classList.remove('active'); if(a.getAttribute('href') === '#'+current) a.classList.add('active'); });
-  });
+  }, appearOptions);
+  faders.forEach(fader=>appearOnScroll.observe(fader));
 
   // Typewriter effect
   const typewriter = document.getElementById('typewriter');
   const text = typewriter.innerText;
   typewriter.innerText = '';
   let i=0;
-  function type(){ if(i<text.length){ typewriter.innerText+=text.charAt(i); i++; setTimeout(type,50); } }
-  type();
+  (function type(){
+    if(i<text.length){ typewriter.innerText+=text.charAt(i); i++; setTimeout(type,50); }
+  })();
 </script>
 
 </body>
